# timesnet_poc

./: README.md  pyproject.toml  setup_project.sh
src/timesnet_poc/: train.py
src/timesnet_poc/data/: data_utils.py
src/timesnet_poc/models/: timesnet.py
src/timesnet_poc/visualization/: analysis.py
