[tool.poetry]
name = "timesnet-poc"
version = "0.1.0"
description = "final project on machine learning using the timesnet paper proof of concept"
authors = ["Matthew Hong <matthewhoung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.6"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"
yfinance = "^0.2.61"
plotly = "^6.1.2"
jupyter = "^1.1.1"
tqdm = "^4.67.1"
torch = {version = "^2.7.1+cpu", source = "pytorch"}
torchvision = {version = "^0.22.1+cpu", source = "pytorch"}
torchaudio = {version = "^2.7.1+cpu", source = "pytorch"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.16.0"
notebook = "^7.4.3"
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
