[tool.poetry]
name = "timesnet-poc"
version = "0.1.0"
description = "TimesNet Proof of Concept: Temporal 2D-Variation Modeling for Financial Time Series"
authors = ["Matthew Hong <matthewhoung@gmail.com>"]
readme = "README.md"
packages = [{include = "timesnet_poc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.0.0", source = "pytorch"}
torchvision = {version = "^0.15.0", source = "pytorch"}
torchaudio = {version = "^2.0.0", source = "pytorch"}
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"
yfinance = "^0.2.0"
plotly = "^5.17.0"
jupyter = "^1.0.0"
tqdm = "^4.65.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
notebook = "^7.0.0"
ipykernel = "^6.25.0"
pre-commit = "^3.4.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "tests/",
    "notebooks/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"